--- a/app_flask/application.yaml
+++ b/app_flask/application.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: microservice
-  namespace: poc
+  name: flask-app
+  namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/JaimeHenaoChallange/opcion5-cronjob-python.git
     targetRevision: HEAD
-    path: ./app_flask
+    path: app_flask
   destination:
     server: https://kubernetes.default.svc
     namespace: poc
