--- a/.github/workflows/cronjob-deploy.yml
+++ b/.github/workflows/cronjob-deploy.yml
@@ -24,5 +24,9 @@ jobs:
     # 3. Construir y subir la imagen Docker
     - name: Build and push Docker image
       run: |
+        if [ -z "${{ secrets.DOCKER_USERNAME_JAIME }}" ]; then
+          echo "Error: DOCKER_USERNAME secret is not set."
+          exit 1
+        fi
         docker build -t ${{ secrets.DOCKER_USERNAME }}/deploy-script:latest ./cronjob
         docker push ${{ secrets.DOCKER_USERNAME }}/deploy-script:latest
