--- a/.github/workflows/cronjob-deploy.yml
+++ b/.github/workflows/cronjob-deploy.yml
@@ -33,15 +33,15 @@ jobs:
     # 3. Construir y subir la imagen Docker
     - name: Build Docker image
       run: |
-        docker build -t ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} -f ./cronjob/deploy_script.py ./cronjob
+        docker build -t ${{ env.DOCKERHUB_USERNAME_JAIME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} -f ./cronjob/Dockerfile ./cronjob
 
     - name: Push Docker image
       run: |
-        docker push ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+        docker push ${{ env.DOCKERHUB_USERNAME_JAIME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
     - name: Update deployment.yaml and commit
       run: |
-        sed -i 's|image:.*|image: '${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}'|' ./cronjob/cronjob.yaml
+        sed -i 's|image:.*|image: '${{ env.DOCKERHUB_USERNAME_JAIME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}'|' ./cronjob/cronjob.yaml
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'actions@github.com'
         git add ./cronjob/cronjob.yaml
