--- a/.github/workflows/cronjob-deploy.yml
+++ b/.github/workflows/cronjob-deploy.yml
@@ -27,21 +27,21 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME_JAIME }}
-        password: ${{ secrets.DOCKER_PASSWORD_JAIME }}
+        username: ${{ env.DOCKERHUB_USERNAME }}
+        password: ${{ env.DOCKERHUB_PASSWORD }}
 
     # 3. Construir y subir la imagen Docker
     - name: Build Docker image
       run: |
-        docker build -t ${{ env.DOCKERHUB_USERNAME_JAIME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} -f ./cronjob/Dockerfile ./cronjob
+        docker build -t ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} -f ./cronjob/Dockerfile ./cronjob
 
     - name: Push Docker image
       run: |
-        docker push ${{ env.DOCKERHUB_USERNAME_JAIME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+        docker push ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
     - name: Update deployment.yaml and commit
       run: |
-        sed -i 's|image:.*|image: '${{ env.DOCKERHUB_USERNAME_JAIME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}'|' ./cronjob/cronjob.yaml
+        sed -i 's|image:.*|image: '${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}'|' ./cronjob/cronjob.yaml
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'actions@github.com'
         git add ./cronjob/cronjob.yaml
