--- a/cronjob/Dockerfile
+++ b/cronjob/Dockerfile
@@ -8,8 +8,9 @@ WORKDIR /app
 COPY deploy_script.py /app/deploy_script.py
 
 # Instala dependencias si es necesario (descomenta si tienes un requirements.txt)
-# COPY requirements.txt /app/requirements.txt
-# RUN pip install -r requirements.txt
+COPY requirements.txt /app/requirements.txt
+RUN pip install -r /app/requirements.txt
+RUN pip install requests
 
 # Define el comando predeterminado para ejecutar el script
 CMD ["python", "/app/deploy_script.py"]
