feat: fix Dockerfile

--- a/cronjob/Dockerfile
+++ b/cronjob/Dockerfile
@@ -11,5 +11,11 @@ COPY deploy_script.py /app/deploy_script.py
 COPY requirements.txt /app/requirements.txt
 RUN pip install -r /app/requirements.txt
 
+# Instala el CLI de ArgoCD
+RUN apt-get update && apt-get install -y curl && \
+    curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64 && \
+    chmod +x /usr/local/bin/argocd && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
 # Define el comando predeterminado para ejecutar el script
 CMD ["python", "/app/deploy_script.py"]
