--- a/cronjob-test/application.yaml
+++ b/cronjob-test/application.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cronjob-deploy-checker
+  name: cronjob-hello-world
   namespace: argocd
 spec:
   project: poc
   source:
     repoURL: https://github.com/JaimeHenaoChallange/opcion5-cronjob-python.git
     targetRevision: HEAD
-    path: cronjob
+    path: cronjob-test
   destination:
     server: https://kubernetes.default.svc
     namespace: poc
