--- a/.github/workflows/flask-app-deploy.yml
+++ b/.github/workflows/flask-app-deploy.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ env.DOCKER_USERNAME_JAIME }}
-        password: ${{ env.DOCKER_PASSWORD_JAIME }}
+        username: ${{ env.DOCKER_USERNAME }}
+        password: ${{ env.DOCKER_PASSWORD }}
 
     # 3. Construir y subir la imagen Docker
     - name: Build Docker image
