--- a/.github/workflows/flask-app-deploy.yml
+++ b/.github/workflows/flask-app-deploy.yml
@@ -32,7 +32,7 @@ jobs:
     # 3. Construir y subir la imagen Docker
     - name: Build Docker image
       run: |
-        docker build -t ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} -f ./app_flask/main.py ./app_flask
+        docker build -t ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} -f ./app_flask/Dockerfile ./app_flask
 
     - name: Push Docker image
       run: |
