--- a/cronjob/cronjob.yaml
+++ b/cronjob/cronjob.yaml
@@ -38,6 +38,8 @@ spec:
                     secretKeyRef:
                       name: argocd-monitor-secret
                       key: ARGOCD_TOKEN
+                - name: ARGOCD_SERVER
+                  value: "https://argocd-server.argocd.svc.cluster.local"
                 - name: SLACK_WEBHOOK_URL
                   valueFrom:
                     secretKeyRef:
