feat: fix cronjob:17

--- a/cronjob/Dockerfile
+++ b/cronjob/Dockerfile
@@ -14,7 +14,8 @@ RUN pip install -r /app/requirements.txt
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
-ENV PYTHONPATH=/app  # Agregar /app al PYTHONPATH
+# Agregar /app al PYTHONPATH
+ENV PYTHONPATH=/app
 
 # Instala el CLI de ArgoCD
 RUN apt-get update && apt-get install -y curl && \
