--- a/.github/workflows/prometheus-grafana-deploy.yml
+++ b/.github/workflows/prometheus-grafana-deploy.yml
@@ -19,6 +19,11 @@ jobs:
     - name: Set up Docker
       uses: docker/setup-buildx-action@v2
 
+    - name: Install Docker Compose
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker-compose
+
     - name: Start Prometheus and Grafana
       working-directory: ./monitoreo
       run: |
