--- a/.github/workflows/prometheus-grafana-deploy.yml
+++ b/.github/workflows/prometheus-grafana-deploy.yml
@@ -29,6 +29,10 @@ jobs:
       run: |
         docker-compose up -d
 
+    - name: List running containers
+      run: |
+        docker ps -a
+
     - name: Verify Prometheus is running
       run: |
         curl -s http://localhost:9090 || echo "Prometheus is not running"
