--- a/.github/workflows/prometheus-grafana-deploy.yml
+++ b/.github/workflows/prometheus-grafana-deploy.yml
@@ -22,6 +22,17 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y kubectl
 
+    - name: Set up kubeconfig
+      env:
+        KUBECONFIG: /path/to/kubeconfig
+      run: |
+        kubectl config use-context <context-name>
+
+    - name: Verify kubectl context
+      run: |
+        kubectl config current-context
+        kubectl cluster-info
+
     - name: Apply Prometheus and Grafana Configurations
       run: |
         kubectl apply -f monitoreo/prometheus-configmap.yaml
