--- a/cronjob/application.yaml
+++ b/cronjob/application.yaml
@@ -9,6 +9,8 @@ spec:
     repoURL: https://github.com/JaimeHenaoChallange/opcion5-cronjob-python.git
     targetRevision: HEAD
     path: cronjob
+    directory:
+      recurse: true
   destination:
     server: https://kubernetes.default.svc
     namespace: poc
