--- a/monitoreo/grafana-deployment.yaml
+++ b/monitoreo/grafana-deployment.yaml
@@ -35,8 +35,10 @@ metadata:
   name: grafana
   namespace: poc
 spec:
+  type: NodePort  # Cambiado de ClusterIP a NodePort
   ports:
   - port: 3000
     targetPort: 3000
+    nodePort: 30300  # Puerto NodePort explícito
   selector:
     app: grafana
