--- a/monitoreo/prometheus-deployment.yaml
+++ b/monitoreo/prometheus-deployment.yaml
@@ -35,8 +35,10 @@ metadata:
   name: prometheus
   namespace: poc
 spec:
+  type: NodePort  # Cambiado de ClusterIP a NodePort
   ports:
   - port: 9090
     targetPort: 9090
+    nodePort: 30090  # Puerto NodePort explícito
   selector:
     app: prometheus
