--- a/app_flask/Dockerfile
+++ b/app_flask/Dockerfile
@@ -2,4 +2,6 @@ FROM python:3.9-slim
 WORKDIR /app
 COPY . .
 RUN pip install Flask
-CMD ["python", "main.py"]
+# -- habilitar CMD ["false"] para poner artefacto en degraded y comentra el siguiente
+CMD ["false"] 
+#CMD ["python", "main.py"]
