--- a/app_flask/Dockerfile
+++ b/app_flask/Dockerfile
@@ -3,5 +3,5 @@ WORKDIR /app
 COPY . .
 RUN pip install Flask
 # -- habilitar CMD ["false"] para poner artefacto en degraded y comentra el siguiente
-CMD ["false"] 
-#CMD ["python", "main.py"]
+#CMD ["false"] 
+CMD ["python", "main.py"]
