--- a/monitoreo/prometheus-deployment.yaml
+++ b/monitoreo/prometheus-deployment.yaml
@@ -35,7 +35,7 @@ metadata:
   name: prometheus
   namespace: poc
 spec:
-  type: NodePort  # Cambiado de ClusterIP a NodePort
+  type: NodePort
   ports:
   - port: 9090
     targetPort: 9090
